<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.smartlandmarks.ui.splash.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash"
        xmlns:tools="http://schemas.android.com/tools">
        <!--
            popUpTo with inclusive=true removes the splash from the back stack, so
            pressing Back on the map exits the app instead of returning to the splash.
        -->
        <action
            android:id="@+id/action_splash_to_map"
            app:destination="@id/mapFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.smartlandmarks.ui.map.MapFragment"
        android:label="@string/nav_map" />

    <fragment
        android:id="@+id/landmarksFragment"
        android:name="com.example.smartlandmarks.ui.landmarks.LandmarksFragment"
        android:label="@string/nav_landmarks" />

    <fragment
        android:id="@+id/activityFragment"
        android:name="com.example.smartlandmarks.ui.activity.ActivityFragment"
        android:label="@string/title_visit_history" />

    <fragment
        android:id="@+id/addLandmarkFragment"
        android:name="com.example.smartlandmarks.ui.add.AddLandmarkFragment"
        android:label="@string/title_add_landmark" />

</navigation>
