<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/offlineBanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/offline_banner"
        android:padding="@dimen/space_sm"
        android:text="@string/offline_message"
        android:textColor="@color/text_on_dark"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/offlineBanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/space_lg"
        android:background="?attr/colorSurface"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_empty_state"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:text="@string/empty_landmarks"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.SmartLandmarks.Body" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRefresh"
        android:layout_width="@dimen/min_touch_target"
        android:layout_height="@dimen/min_touch_target"
        android:layout_margin="@dimen/space_md"
        android:src="@drawable/ic_refresh"
        android:contentDescription="@string/cd_refresh_map"
        app:layout_constraintBottom_toTopOf="@id/fabLocate"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLocate"
        android:layout_width="@dimen/min_touch_target"
        android:layout_height="@dimen/min_touch_target"
        android:layout_margin="@dimen/space_md"
        android:src="@drawable/ic_my_location"
        android:contentDescription="@string/cd_locate_me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
