<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:padding="@dimen/space_md">

    <ImageView
        android:id="@+id/landmarkImage"
        android:layout_width="0dp"
        android:layout_height="@dimen/detail_image_height"
        android:scaleType="centerCrop"
        android:background="@color/surface_variant"
        android:contentDescription="@string/cd_landmark_image"
        android:src="@drawable/ic_image_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="@color/text_primary"
        app:layout_constraintTop_toBottomOf="@id/landmarkImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Saint Martin's Island"
        xmlns:tools="http://schemas.android.com/tools" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:textColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/visitCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_md"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="@color/text_secondary"
        app:layout_constraintTop_toTopOf="@id/scoreText"
        app:layout_constraintStart_toEndOf="@id/scoreText" />

    <TextView
        android:id="@+id/averageDistanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_md"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="@color/text_secondary"
        app:layout_constraintTop_toTopOf="@id/scoreText"
        app:layout_constraintStart_toEndOf="@id/visitCountText" />

    <TextView
        android:id="@+id/coordinatesText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="@color/text_secondary"
        app:layout_constraintTop_toBottomOf="@id/scoreText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/visitContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        app:layout_constraintTop_toBottomOf="@id/coordinatesText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/visitButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_touch_target"
            android:text="@string/action_visit" />

        <ProgressBar
            android:id="@+id/visitProgress"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/on_primary"
            android:visibility="gone" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/space_xs"
        android:text="@string/action_delete"
        android:textColor="@color/error"
        app:layout_constraintTop_toBottomOf="@id/visitContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
